--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "bitcoin-client-electron",
-  "version": "1.0.2",
-  "description": "Multi-platform Bitcoin desktop client built with Electron",
+  "version": "1.0.3",
+  "description": "Cross-platform Bitcoin desktop client built with Electron",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . bitcoin-client --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Bitcoin Client\"",
+    "package-linux": "electron-packager . bitcoin-client --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/linux/icon.png --prune=true --out=release-builds"
   },
   "repository": "https://github.com/javidgon/bitcoin-client",
   "keywords": [
